Update content, layout, and Blind components - Fix bug where some content was not completely covered by blind - Add startHeight back to blind - Adjust word breaks for Lean Space & SOT case studies - Remove transform for sbs-headers once screen is small enough

--- a/src/front/pages/Blog/posts/_cs.scss
+++ b/src/front/pages/Blog/posts/_cs.scss
@@ -292,6 +292,9 @@
       columns: auto;
     }
 
+    > .sbs-header {
+      transform: none;
+    }
     > .subgrid-subcontent > .sticky-media {
       margin-top: size.$size-72;
     }
